<resources>
    <string name="app_name">IandWe1</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">clear</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="delete">delete</string>
    <string name="decimal">.</string>
    <string name="percentage">%</string>
    <string name="power">^</string>
    <string name="sqroot">√</string>
    <string name="curoot">؆</string>
    <string name="openbracket">(</string>
    <string name="closebracket">)</string>
    <string name="Exit">Exit</string>

</resources>
