<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="#000"

    tools:context="com.example.sayandeep.iandwe1.MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/one"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInput" />

    <Button
        android:id="@+id/button2"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/two"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/etInput" />

    <Button
        android:id="@+id/button3"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/three"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/etInput" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/etInput" />

    <Button
        android:id="@+id/button4"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/four"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/five"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/six"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/minus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/button7"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/seven"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/eight"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/nine"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/buttonMultiplication"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/multiply"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonSub" />

    <Button
        android:id="@+id/button0"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/zero"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/decimal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/equal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDecimal"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/divide"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/buttonEquals"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplication"
        app:layout_constraintVertical_bias="0.0" />

    <Button
            android:id="@+id/buttonClear"
            android:layout_width="69dp"
            android:layout_height="64dp"
            android:layout_marginStart="28dp"
            android:text="@string/clear"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonpercent" android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/buttonpercent"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/percentage"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button0" />

    <Button
        android:id="@+id/buttonpower"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/power"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/buttonpercent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDecimal" />

    <Button
        android:id="@+id/buttonsqroot"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/sqroot"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/buttonpower"
        app:layout_constraintTop_toBottomOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttoncuroot"
        android:layout_width="71dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/curoot"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/buttonsqroot"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivision" />

    <Button
            android:id="@+id/buttonopenbracket"
            android:layout_width="71dp"
            android:layout_height="64dp"
            android:layout_marginEnd="204dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/openbracket"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonClear"
            app:layout_constraintTop_toBottomOf="@+id/buttonpower" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/buttonclosebracket"
            android:layout_width="71dp"
            android:layout_height="64dp"
            android:layout_marginEnd="44dp"
            android:text="@string/closebracket"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonopenbracket"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonsqroot"/>



    <EditText
        android:id="@+id/etInput"
        android:labelFor="@id/etInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:cursorVisible="false"
        android:ems="10"
        android:background="#eee9e9"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
            android:text="@string/Exit"
            android:layout_width="71dp"
            android:layout_height="64dp"
            android:id="@+id/buttonExit"

            app:layout_constraintTop_toBottomOf="@+id/buttoncuroot" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="4dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/buttonclosebracket" app:layout_constraintHorizontal_bias="0.142"/>
</android.support.constraint.ConstraintLayout>
